# quantum_frame

./: .gitignore  AICIR_ARCHITECTURE_SUMMARY.md  Architecture.md  CHANGELOG.md  CLAUDE.md  CONTENTS.md  Circuit.py  Core.py  INSTALL.md  MANIFEST.in  MANUAL.md  NEXT.md  README.md  basic_mind.py  basic_torch.py  compare.md  comparison.md  define_mind.py  demo_circuit.py  demo_npu.py  design.md  design_cn.md  pyproject.toml  qec.md  qft_demo_torch.py  quantum_sim_demo.py  run_tests.py  schedule.md  smoke_npu_new_path.py
aicir/: README.md  __init__.py  operators.py  protocols.py
demo/: QUICKSTART.md  README.md  __init__.py  best_random_ghz.json  best_random_ghz.qasm  best_random_ghz.simplified.json  canonical_ghz.simplified.json  convert_to_qasm.py  gen_ghz_examples.py  print_circuits.py  qas_demo.py  qas_env_nexq.py  qas_envs_nexq.py  qas_sb3_train.py  simplify_circuits.py  test_qas.py  utils_nexq.py  visual_circuit_demo.py  visual_density_demo.py  visual_qas_demo.py  visual_state_demo.py
demos/: LiH.py  LiH_cir.py  README.md  _visual_demo_utils.py  check_npu_autograd.py  chemistry_ansatz.py  compare_chem_reference.py  demo_1.py  demo_npu.py  demo_npu_mps.py  demo_npu_probe.py  demo_npu_qnn_4card.py  demo_npu_tensor.py  grover_demo.py  lih_vqa_qas_circuit.qasm  probe_npu_svd.py  qas_evaluator_demo.py  qft_demo.py  qnn_gradient_demo.py  qubo_qaoa_demo.py  qubo_tsp_debug_demo.py  reset_demo.py  snap_demo.py  test_1.py  visual_circuit_demo.py  visual_circuit_png_demo.py  visual_density_demo.py  visual_qas_demo.py  visual_state_demo.py  vqe_circuit_figure_demo.py  (+1 more)
(+948 files in other folders)
